n0tcnj1eck4h.osu-reality-bender.bf59953a119cd904bd809f4ee8bf318d27fc291c
Running as unit: run-p2415840-i14995946.scope; invocation ID: 17098e8200b649d0928f2fd03b544c20
   Compiling proc-macro2 v1.0.92
   Compiling unicode-ident v1.0.14
   Compiling autocfg v1.4.0
   Compiling shlex v1.3.0
   Compiling crossbeam-utils v0.8.20
   Compiling libc v0.2.168
   Compiling pkg-config v0.3.31
   Compiling cc v1.2.3
    Checking utf8parse v0.2.2
   Compiling rust_decimal v1.36.0
   Compiling num-traits v0.2.19
   Compiling serde v1.0.216
   Compiling rustversion v1.0.18
   Compiling syn v1.0.109
   Compiling quote v1.0.37
    Checking crossbeam-epoch v0.9.18
    Checking anstyle-parse v0.2.6
   Compiling syn v2.0.90
    Checking memchr v2.7.4
    Checking colorchoice v1.0.3
   Compiling thiserror v1.0.69
   Compiling rayon-core v1.12.1
    Checking anstyle v1.0.10
    Checking minimal-lexical v0.2.1
    Checking is_terminal_polyfill v1.70.1
    Checking anstyle-query v1.1.2
   Compiling lzma-sys v0.1.20
   Compiling arrayvec v0.7.6
    Checking anstream v0.6.18
    Checking nom v7.1.3
    Checking crossbeam-deque v0.8.5
   Compiling heck v0.4.1
    Checking iana-time-zone v0.1.61
    Checking strsim v0.11.1
   Compiling heck v0.5.0
   Compiling anyhow v1.0.94
    Checking clap_lex v0.7.4
    Checking yansi v1.0.1
    Checking diff v0.1.13
    Checking either v1.13.0
    Checking pretty_assertions v1.4.1
    Checking clap_builder v4.5.23
    Checking chrono v0.4.39
   Compiling strum_macros v0.24.3
   Compiling rust_decimal_macros v1.36.0
    Checking strum v0.24.1
    Checking rosu-mods v0.2.1
    Checking rosu-map v0.2.0
    Checking rayon v1.10.0
   Compiling thiserror-impl v1.0.69
   Compiling clap_derive v4.5.18
    Checking rosu-pp v2.0.0
    Checking whoami v1.5.2
    Checking md5 v0.7.0
error[E0271]: type mismatch resolving `[OsuDifficultyObject<'_>] == Box<[OsuDifficultyObject<'_>]>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/osu/difficulty/gradual.rs:211:56
    |
211 |         let mut aim = Skill::new(&mut self.skills.aim, &self.diff_objects);
    |                                                        ^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[OsuDifficultyObject<'_>] == Box<[OsuDifficultyObject<'_>]>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/osu/difficulty/gradual.rs:212:78
    |
212 |         let mut aim_no_sliders = Skill::new(&mut self.skills.aim_no_sliders, &self.diff_objects);
    |                                                                              ^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[OsuDifficultyObject<'_>] == Box<[OsuDifficultyObject<'_>]>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/osu/difficulty/gradual.rs:213:60
    |
213 |         let mut speed = Skill::new(&mut self.skills.speed, &self.diff_objects);
    |                                                            ^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[OsuDifficultyObject<'_>] == Box<[OsuDifficultyObject<'_>]>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/osu/difficulty/gradual.rs:214:70
    |
214 |         let mut flashlight = Skill::new(&mut self.skills.flashlight, &self.diff_objects);
    |                                                                      ^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[OsuDifficultyObject<'_>] == Vec<OsuDifficultyObject<'_>>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/osu/difficulty/mod.rs:138:55
    |
138 |             let mut aim = Skill::new(&mut skills.aim, &diff_objects);
    |                                                       ^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[OsuDifficultyObject<'_>] == Vec<OsuDifficultyObject<'_>>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/osu/difficulty/mod.rs:139:77
    |
139 |             let mut aim_no_sliders = Skill::new(&mut skills.aim_no_sliders, &diff_objects);
    |                                                                             ^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[OsuDifficultyObject<'_>] == Vec<OsuDifficultyObject<'_>>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/osu/difficulty/mod.rs:140:59
    |
140 |             let mut speed = Skill::new(&mut skills.speed, &diff_objects);
    |                                                           ^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[OsuDifficultyObject<'_>] == Vec<OsuDifficultyObject<'_>>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/osu/difficulty/mod.rs:141:69
    |
141 |             let mut flashlight = Skill::new(&mut skills.flashlight, &diff_objects);
    |                                                                     ^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[CatchDifficultyObject] == Box<[CatchDifficultyObject]>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/catch/difficulty/gradual.rs:153:59
    |
153 |         let mut movement = Skill::new(&mut self.movement, &self.diff_objects);
    |                                                           ^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[CatchDifficultyObject] == Box<[CatchDifficultyObject]>`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/catch/difficulty/mod.rs:91:58
   |
91 |             let mut movement = Skill::new(&mut movement, &diff_objects);
   |                                                          ^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[ManiaDifficultyObject] == Box<[ManiaDifficultyObject]>`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/mania/difficulty/gradual.rs:176:55
    |
176 |         let mut strain = Skill::new(&mut self.strain, &self.diff_objects);
    |                                                       ^^^^^^^^^^^^^^^^^^ types differ

error[E0271]: type mismatch resolving `[ManiaDifficultyObject] == Box<[ManiaDifficultyObject]>`
  --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/rosu-pp-2.0.0/src/mania/difficulty/mod.rs:73:54
   |
73 |             let mut strain = Skill::new(&mut strain, &diff_objects);
   |                                                      ^^^^^^^^^^^^^ types differ

    Checking osu-file-parser v1.1.0
For more information about this error, try `rustc --explain E0271`.
error: could not compile `rosu-pp` (lib) due to 12 previous errors
warning: build failed, waiting for other jobs to finish...
